--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,65 @@
+annotated-types==0.6.0
+anthropic==0.23.1
+anyio==4.3.0
 asgiref==3.7.2
+black==24.2.0
 cachetools==5.3.2
 certifi==2024.2.2
 charset-normalizer==3.3.2
+click==8.1.7
+distro==1.9.0
 Django==5.0.2
 django-appconf==1.0.6
+django-browser-reload==1.12.1
 django-compressor==4.4
+django-debug-toolbar==4.3.0
 django-htmx==1.17.2
 django-request==1.6.3
+django-stubs==4.2.7
+django-stubs-ext==4.2.7
+exceptiongroup==1.2.0
+filelock==3.13.3
+fsspec==2024.3.1
 google-api-core==2.17.1
 google-api-python-client==2.119.0
 google-auth==2.28.1
 google-auth-httplib2==0.2.0
 googleapis-common-protos==1.62.0
+h11==0.14.0
+httpcore==1.0.5
 httplib2==0.22.0
+httpx==0.27.0
+huggingface-hub==0.22.2
 idna==3.6
 Markdown==3.5.2
+mypy==1.8.0
+mypy-extensions==1.0.0
 packaging==23.2
+pathspec==0.12.1
+platformdirs==4.2.0
 protobuf==4.25.3
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
+pydantic==2.6.4
+pydantic_core==2.16.3
 pyparsing==3.1.1
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+PyYAML==6.0.1
 rcssmin==1.1.1
 requests==2.31.0
 rjsmin==1.2.1
 rsa==4.9
+ruff==0.2.2
 six==1.16.0
+sniffio==1.3.1
 sqlparse==0.4.4
+tokenizers==0.15.2
+tomli==2.0.1
+tqdm==4.66.2
+types-pytz==2024.1.0.20240203
+types-PyYAML==6.0.12.12
+typing_extensions==4.9.0
 uritemplate==4.1.1
 urllib3==2.2.1
 whitenoise==6.6.0
